[gd_scene load_steps=2 format=3 uid="uid://hkfov7lvebi2"]

[ext_resource type="Script" path="res://Units/Components/attack_component.gd" id="1_3e11q"]

[node name="AttackComponent" type="Node2D"]
script = ExtResource("1_3e11q")
attack_damage = 2.0
attack_range = 20.0
attack_speed = 1.0

[node name="AttackSpeedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="AttackSpeedTimer" to="." method="_on_attack_speed_timer_timeout"]
